# home-noc

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_devices.py
backend/app/: __init__.py  config.py  db.py  dependencies.py  main.py  models.py  schemas.py  security.py  version.py
backend/app/api/v1/routers/: devices.py  scans.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_devices.py  test_health,py  test_health.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: NavBar.tsx
frontend/src/pages/: Index.tsx  Login.tsx  Logout.tsx
frontend/src/styles/: tailwind.css
