# backend/pyproject.toml
[project]
name = "home-noc-api"
version = "0.1.0"
description = "Home-NOC backend API (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "SQLAlchemy>=2.0.34",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "orjson>=3.10.7",
  "typing-extensions>=4.12.0",
  "alembic>=1.13.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "requests>=2.32.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","S","B"]
ignore = ["S104"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
