[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-noc-backend"
version = "0.1.0"
description = "Home-NOC FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Home-NOC" }]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "orjson>=3.9",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*", "scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E","F","W","B","UP","I","S"]
ignore = ["S110"]  # env parsing try/except/pass

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]          # allow asserts in tests
"alembic/**" = ["E402","I001"] # path hack/import order in env.py
"app/api/**" = ["B008"]        # FastAPI-style Depends/Query defaults
